# toolbox

./: .gitignore  README.md  mbox-viewer.html  package-lock.json  package.json  playwright.config.js
.github/workflows/: test.yml
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  command-palette.js  search.js  state-manager.js  theme-manager.js  tool-registry.js  widget-manager.js  window-manager.js
frontend/tools/: calculator.js  clock.js  date-checker.js  diff-checker.js  html-viewer.js  kanban.js  notepad.js  python-interp.js  redactor.js  string-replacer.js  theme-settings.js  validator.js  workspace-browser.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/drag-fix/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig
src-tauri/drag-fix/src/platform_impl/macos/: mod.rs
src-tauri/drag-fix/src/platform_impl/windows/: mod.rs
src-tauri/src/: main.rs
src-tauri/src/commands/: diff.rs  python.rs  redactor.rs  validator.rs  workspace.rs
tests/: calculator.spec.js  core.spec.js  date-checker.spec.js  widgets-and-viewer.spec.js
