[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open", "shell-execute", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sysinfo = "0.30"
csv = "1.3"
similar = { version = "2.4", features = ["inline"] }
dirs = "5"
tauri-plugin-drag = "0.3.2"
drag = "0.4"
image = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
drag = { path = "./drag-fix" }
