[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sysinfo = "0.30"
csv = "1.3"
similar = { version = "2.4", features = ["inline"] }
dirs = "5"
tauri-plugin-drag = "2"
drag = "2"
image = "0.25"
reqwest = { version = "0.13.3", features = ["blocking"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
